--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,6 +17,6 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: Test with pytest
-      run: |
-        main.py
+      - name: Run main.py
+        run: |
+          python main.py
