--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,19 +17,4 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-      
-      - name: Run main.py
-        run: |
-          python main.py
-        env:
-          MY_GITHUB_TOKEN: \$
+      - run: ls -al
