--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,20 +1,8 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python application
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
-
+name: Our Workflow
+on: push
 jobs:
-  build:
+  checkout:
     runs-on: self-hosted
-
     steps:
       - run: ls -al
+      - uses: actions/checkout@v3
