--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,6 +3,15 @@ on: push
 jobs:
   checkout:
     runs-on: self-hosted
-    steps:
-      - run: ls -al
-      - uses: actions/checkout@v3
+  
+  steps:
+     - name: Check out repository
+       uses: actions/checkout@v2
+
+     - name: Set up Python
+       uses: actions/setup-python@v2
+       with:
+         python-version: 3.x
+
+     - name: Run Python script
+       run: python main.py.
