--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,6 +10,15 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-
+        
+      - name: Set up Python # 파이썬 설정
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x # 파이썬 버전 선택
+          
+      - name: Install dependencies # 의존성 설치
+        run: |
+          python -m pip install --upgrade pip
+        
       - name: Run Python script
         run: python main.py # 이곳에 실제 파이썬 파일명을 적어주세요.
