--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,3 +22,8 @@ jobs:
         
       - name: Run Python script
         run: python main.py # 이곳에 실제 파이썬 파일명을 적어주세요.
+
+      - uses: shufo/auto-assign-reviewer-by-assignee@v1.1.0
+        with:
+          config: '.github/auto-assigner.yml'
+          token: ${{ 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 }}
