--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,4 +26,4 @@ jobs:
       - uses: shufo/auto-assign-reviewer-by-assignee@v1.1.0
         with:
           config: '.github/auto-assigner.yml'
-          token: ${{ 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 }}
+          token: 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
