--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,8 +22,7 @@ jobs:
         
       - name: Run Python script
         run: python main.py # 이곳에 실제 파이썬 파일명을 적어주세요.
-
-      - uses: shufo/auto-assign-reviewer-by-assignee@v1.1.0
+    
+      - uses: kentaro-m/auto-assign-action@v1.2.1
         with:
-          config: '.github/auto-assigner.yml'
-          token: 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
+           configuration-path: '.github/auto-assigner.yml'
